attempt fix icons visible

--- a/src/components/SortBlock/SortBlock.scss
+++ b/src/components/SortBlock/SortBlock.scss
@@ -43,7 +43,7 @@
     box-sizing: border-box;
     padding: 0.6em 1.4em 0.5em 0.8em;
     background-color: #fff;
-    background-image: url(/img/icons/arrow-down.svg);
+    background-image: url("./arrow-down.svg");
     background-position: 94% 50% ;
     background-repeat: no-repeat;
 
